feat: redesign research algorithm as pilot 0.7
